2006-05-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/encodinglib.py:
	* lib/gaupol/base/util/langlib.py:
	* lib/gaupol/base/util/test/test_encodinglib.py:
	* lib/gaupol/base/util/test/test_langlib.py:
	* lib/gaupol/base/util/test/test_wwwlib.py:
	* lib/gaupol/base/util/wwwlib.py:
	  Minor fixes. Separated testing.

	* lib/gaupol/gtk/delegates/fileopen.py:
	* lib/gaupol/gtk/dialogs/filechooser.py:
	  Adapted to above changes.

	* tools/pylint:
	  Replaced sys.path use with PYTHONPATH.

2006-05-13  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/listlib.py:
	  (strip): Renamed and made non-in-place.

	* lib/gaupol/base/files/ssa.py:
	* lib/gaupol/base/files/subrip.py:
	* lib/gaupol/base/files/subviewer2.py:
	  Adapted to listlib changes.

	* lib/gaupol/base/util/test/__init__.py:
	* lib/gaupol/base/util/test/test_listlib.py:
	  New files.

2006-05-13  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/format.py:
	* lib/gaupol/base/tags/converter.py:
	* lib/gaupol/base/util/relib.py:
	* lib/gaupol/base/util/test/test_relib.py:
	  Removed relib.

2006-05-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* MANIFEST.in:
	  Fixed to include everything from data dir.

	* data/gaupol.desktop:
	  Removed icon extension.

	* data/icons/gaupol.png:
	* data/icons/gaupol.svg:
	  New icons.

	* lib/gaupol/gtk/delegates/guiinit.py:
	* lib/gaupol/gtk/dialogs/about.py:
	  Get icon from theme.

	* setup.py:
	  Install icons to hicolor theme.

2006-05-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialogs/filechooser.py:
	  Added a separator in the encoding combo box.

2006-05-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.4.1 due to branch release.

2006-05-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/tags/__init__.py:
	* lib/gaupol/base/tags/ssa.py:
	* lib/gaupol/base/tags/subrip.py:
	  Replaced None flags with zeros.

	* lib/gaupol/base/util/relib.py: